--- a/Capapresentacionadmin/Views/Home/Usuarios.cshtml
+++ b/Capapresentacionadmin/Views/Home/Usuarios.cshtml
@@ -15,14 +15,14 @@
         <i class="fas fa-users m-1"></i> Lista de usuarios
     </div>
     <div class="card-body">
-        <div class="row">
+        <div class="row mt-6">
             <div class="col-12">
                 <button type="button" class="btn btn-success" onclick="AbrirModal(null)">Crear nuevo usuario</button>
             </div>
 
-            <hr />
+            <hr class="mt-3"/>
 
-            <table id="tabla" class="display cell-border" style="width: 100%">
+            <table id="tabla" class="display cell-border"  style="width: 100%">
                 <thead>
                     <tr>
                         <th> Nombres </th>
@@ -40,10 +40,6 @@
     </div>
 </div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-</button>
 
 <!-- Modal -->
 <div class="modal fade" id="FormModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
@@ -81,6 +77,14 @@
                     </div>
 
                 </div> 
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <div id="mensajeError"class="alert alert-danger" role="alert">
+                            A simple danger alert—check it out!
+                        </div>
+                    </div>
+
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -200,19 +204,50 @@
                 Nombres: $("#txtnombres").val(), 
                 
             }
+            
+            $.ajax({
+                url: '@Url.Action("GuardarUsuario", "Home")',
+                type: "POST",
+                data: JSON.stringify({ objeto: Usuario }),
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
 
-            if (Usuario.IdUsuario == 0) {
+                    
+                    //USUARIO NUEVO
+                    if (Usuario.IdUsuario == 0) {
 
-                tabladata.row.add(Usuario).draw(false);
+                        if (data.resultado != 0) {
 
-            } else {
+                            Usuario.IdUsuario = data.resultado;
+                            tabladata.row.add(Usuario).draw(false);
+                            $("#FormModal").modal("hide");
+                        }
+                        else {
+                            alert(data.mensaje)
+                        }
+                      
+                    } else
+                    {
 
-                tabladata.row(filaSeleccionada).data(Usuario).draw(false);
-                
+                        tabladata.row(filaSeleccionada).data(Usuario).draw(false);
 
-            }
+                    }
+                    
+                },
+                error: function (error) {
+                    console.log(error)
+                },
+                beforeSend: function () {
 
-            $("#FormModal").modal("hide");
+                }
+
+
+            });
+
+           
+
+            
         }
 
 
