--- a/Capapresentacionadmin/Views/Shared/_Layout.cshtml
+++ b/Capapresentacionadmin/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - CompanyJLS</title>
     @Styles.Render("~/Content/css")
     @*@Scripts.Render("~/bundles/modernizr")*@
 </head>
@@ -49,11 +49,11 @@
                             Usuarios
                             </a>
                             <div class="sb-sidenav-menu-heading">Mantenimiento</div>
-                            <a class="nav-link" href="@Url.Action("Categoria","Mantenimiento")">
+                            <a class="nav-link" href="@Url.Action("Categoria","MNT")">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Categorias
                             </a>
-                            <a class="nav-link" href="@Url.Action("Plato","Mantenimiento")">
+                            <a class="nav-link" href="@Url.Action("Plato","MNT")">
                                 <div class="sb-nav-link-icon"><i class="fas fa-boxes"></i></div>
                                 Platos
                             </a>
