--- a/Capapresentacionadmin/Views/MNT/Plato.cshtml
+++ b/Capapresentacionadmin/Views/MNT/Plato.cshtml
@@ -4,5 +4,334 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Plato</h2>
+<ol class="breadcrumb mb-4 mt-4">
+    <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+    <li class="breadcrumb-item active">Platos</li>
+</ol>
 
+<div class="card">
+    <div class="card-header">
+        <i class="fas fa-boxes m-1"></i> Lista de platos
+    </div>
+    <div class="card-body">
+        <div class="row mt-6">
+            <div class="col-12">
+                <button type="button" class="btn btn-success" onclick="AbrirModal(null)">Crear nuevo plato</button>
+            </div>
+
+            <hr class="mt-2" />
+
+            <table id="tabla" class="display cell-border" style="width: 100%">
+                <thead>
+                    <tr>
+                        <th> Nombre Plato </th>
+                        <th> Ingredientes </th>
+                        <th> Descripcion </th>
+                        <th> Precio </th>
+                        <th> Activo </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="FormModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header bg-dark text-white">
+                <h5 class="modal-title" id="exampleModalLabel">Usuario</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body ">
+
+                <input id="txtid" type="text" value="0" />
+
+                <form id="contenedor " class="row">
+                    <div class="col-sm-3">
+                        <div class="mb-2">
+                            <img id="img_producto" height="197" width="200" class="border rounded mx-auto d-block img-fluid" />
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                        <input class="form-control" type="file" id="fileProducto" accept="image/png, image/jpg, image/jpeg" onchange="" />
+                    </div>
+
+                    <div class="col-sm-3">
+                        <div class="mb-3">
+                            <label class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="txtnombre" name="nombre" />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Ingredientes</label>
+                            <input type="text" class="form-control" id="txtingredientes" name="ingredientes" />
+                        </div>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <div class="mb-3">
+                            <label class="form-label">Precio</label>
+                            <input type="text" class="form-control" id="txtprecio" name="Precio" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
+                            <input type="text" class="form-control" id="txtdescripcion" autocomplete="off">
+                        </div>
+                    </div>
+
+                    <div class="row g-2">
+                        
+                        <div class="col-sm-6">
+                            <label for="cboactivo" class="form-label">Activo</label>
+                            <select id="cboactivo" class="form-select">
+
+                                <option value="1">Si</option>
+                                <option value="0">No</option>
+
+                            </select>
+                        </div>
+
+                    </div>
+
+
+                </form>
+
+
+
+                
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <div id="mensajeError" class="alert alert-danger" role="alert">
+                            A simple danger alert—check it out!
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" onclick="Guardar()">Guardar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts
+    {
+    <script>
+
+        var tabladata;
+        var filaSeleccionada;
+
+            @*$.ajax({
+                url: '@Url.Action("ListarCategoria","MTN")',
+                type: "GET",
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (data)
+
+                {
+                    console.log(data)
+                }
+
+            });*@
+
+
+        tabladata = $("#tabla").DataTable(
+
+            {
+                responsive: true,
+                ordering: false,
+                "ajax": {
+                    url: '@Url.Action("ListarCategoria", "MNT")',
+                    type: "GET",
+                    dataType: "json"
+
+
+        },
+                "columns": [
+                    { "data": "Descripcion" },
+                    {
+                        "data": "Activo", "render": function (valor)
+                        {
+                            if (valor)
+                            {
+                                return '<span class="badge bg-success">Si</span>'
+
+                            } else
+                                {
+                                return '<span class="badge bg-danger">No</span>'
+                                }
+
+                        }
+                    },
+                    {
+                        "defaultContent": '<button type="button" class="btn btn-primary btn-sm btn-editar"><i class="fas fa-pen m-1"></i></button>' +
+                            '<button type="button" class="btn btn-danger btn-sm ms-2 btn-eliminar"><i class="fas fa-trash m-1"></i></button>',
+                        "orderable": false,
+                        "searchable": false,
+                        "width": "90px"
+                    }
+
+                ],
+                "language": {
+                    "url": "https://cdn.datatables.net/plug-ins/2.0.8/i18n/es-ES.json"
+                }
+
+            });
+
+        function AbrirModal(json)
+        {
+            $("#txtid").val(0);
+            $("#txtdescripcion").val("");
+            $("#cboactivo").val(1);
+
+
+            $("#mensajeError").hide();
+
+            if (json != null) {
+
+                $("#txtid").val(json.IdCategoria);
+                $("#txtdescripcion").val(json.Descripcion);
+                $("#cboactivo").val(json.Activo == true ? 1 : 0);
+            }
+
+            $("#FormModal").modal("show");
+        }
+
+        $("#tabla tbody").on("click", ".btn-editar", function () {
+
+            filaSeleccionada = $(this).closest("tr");
+
+            var data = tabladata.row(filaSeleccionada).data();
+
+            AbrirModal(data)
+
+            console.log(data);
+
+        })
+
+        $("#tabla tbody").on("click", ".btn-eliminar", function () {
+
+            var categoriaseleccionada = $(this).closest("tr");
+
+            var data = tabladata.row(categoriaseleccionada).data();
+
+
+            swal({
+                title: "¿Está seguro?",
+                text: "¿Desea eliminar la categoria?, esta opción es irreversible.",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-primary",
+                confirmButtonText: "Aceptar",
+                cancelButtonText: "Cancelar",
+                closeOnConfirm: true
+            },
+                function () {
+
+                    $.ajax({
+                        url: '@Url.Action("EliminarCategoria", "MNT")',
+                        type: "POST",
+                        data: JSON.stringify({ id: data.IdCategoria }),
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+
+                            if (data.resultado) {
+
+                                tabladata.row(categoriaseleccionada).remove().draw();
+                            } else {
+
+                                swal("No se pudo eliminar", data.mensaje, "error")
+                            }
+                        },
+                        error: function (error) {
+                            console.log(error)
+                        }
+                    });
+                });
+
+            console.log(data);
+        })
+
+        function Guardar() {
+
+            var Categoria = {
+
+                IdCategoria: $("#txtid").val(),
+                Descripcion: $("#txtdescripcion").val(),
+                Activo: $("#cboactivo").val() == 1 ? true : false,
+
+            }
+
+            $.ajax({
+                url: '@Url.Action("GuardarCategoria", "MNT")',
+                type: "POST",
+                data: JSON.stringify({ objeto: Categoria }),
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
+
+                    $(".modal-body").LoadingOverlay("hide");
+
+                    //Categoria nueva
+                    if (Categoria.IdCategoria == 0) {
+
+                        if (data.resultado != 0) {
+
+                            Categoria.IdCategoria = data.resultado;
+                            tabladata.row.add(Categoria).draw(false);
+                            $("#FormModal").modal("hide");
+                        }
+                        else
+                        {
+                            $("#mensajeError").text(data.mensaje);
+                            $("#mensajeError").show();
+                        }
+
+                    } else
+                    //editar categoria
+                    {
+                        if (data.resultado) {
+
+                            tabladata.row(filaSeleccionada).data(Categoria).draw(false);
+                            filaSeleccionada = null;
+                            $("#FormModal").modal("hide");
+
+                        } else
+                        {
+                            $("#mensajeError").text(data.mensaje);
+                            $("#mensajeError").show();
+                        }
+                    }
+                },
+                error: function (error) {
+
+                    $(".modal-body").LoadingOverlay("hide");
+                    $("#mensajeError").text("Error AJAX");
+                    $("#mensajeError").show();
+                },
+                beforeSend: function () {
+                    $(".modal-body").LoadingOverlay("show", {
+                        imageResizeFactor: 2,
+                        text: "Cargando...",
+                        size: 14
+                    })
+                }
+            });
+
+
+
+
+        }
+
+
+    </script>
+}
