--- a/Capapresentacionadmin/Views/Shared/_Layout.cshtml
+++ b/Capapresentacionadmin/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <li><a class="dropdown-item" href="#!">Correo del usuario</a></li>
                     
                     <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="#!">Cerrar sesión</a></li>
+                    <li><a class="dropdown-item" href="@Url.Action("CerrarSesion","Acceso")">Cerrar sesión</a></li>
                 </ul>
             </li>
         </ul>
@@ -61,10 +61,6 @@
                             
                     </div>
                 </div>
-                <div class="sb-sidenav-footer">
-                    <div class="small">Logged in as:</div>
-                    Start Bootstrap
-                </div>
             </nav>
         </div>
         <div id="layoutSidenav_content">
@@ -76,11 +72,8 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                        <div class="text-muted">Copyright &copy; CompanyJLS 2024</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
                         </div>
                     </div>
                 </div>
